--- a/app.json
+++ b/app.json
@@ -50,11 +50,11 @@
             "url": "heroku/python"
         }
     ],
-    "stack": "heroku-20",
+    "stack": "heroku-22",
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "eco"
         }
     }
 }
