--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     },
     "buildpacks": [ 
         {
-            "url": ""https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
         }, 
         { 
             "url": "heroku/python"
